# QSP-SLAM

./: .gitignore  CMakeLists copy.txt  CMakeLists.txt  README.md  complex_daresult.txt  develop_record.md  environment_cuda113.yml  extract_map_objects_multi.py  install.sh  instance_observation_num.txt  label_tool  label_tool.cc  object_list_nonparam.txt  optimization_edges.txt  pcd2bin  qsp_slam_mono.cc  qsp_slam_rgbd.cc  visualize_map.py  visualize_map_multi.py
Example/interface/: CMakeLists.txt  rgbd_launcher.cpp  svd_generate.txt  svd_test.cpp
Example/interface/baseline/: NP.cpp  TrackingNP.h
Example/interface/func/: func.cpp  func.h
Example/interface/lab/: evo_hist_orientation.cpp  evo_local_det.cpp  experiment_lab.cpp
Example/interface/test/: test_chi.cpp  test_planeExtraction.cpp  test_priconfig.cpp  test_projectionOfTextureArea.cpp  test_semanticprior.cpp  test_textureArea.cpp  test_visualizeMap.cpp
Example/interface/test/textureArea/: CMakeLists.txt  EllipsoidTexture.cpp  EllipsoidTexture.h  TestFunctions.cpp  TestFunctions.h  TextureEdges.cpp  TextureEdges.h  TextureFeature.cpp  TextureFeature.h  TextureOptimizer.cpp  TextureOptimizer.h  evo_checkAssociations.cpp  test_dt.cpp  test_textureAreaAutoDetection.cpp  test_textureAreaFrames.cpp  test_textureAreaMultipleFrames.cpp
Example/interface/view_dataset/: CMakeLists.txt  dataset_viewer.cpp
assets/: README_DSP.md  develop_record.md  保存格式.md
configs/: config_redwood_03815.json  config_redwood_chair_01053.json  config_redwood_monitor_01041.json  config_self_allobject_circle.json  config_self_allobject_ground.json  config_tum_fr1_desk.json  config_tum_fr2_dishes.json  freiburg_001.yaml  freiburg_002.yaml  freiburg_010.yaml  redwood_02484.yaml  redwood_03815.yaml  redwood_09374.yaml  redwood_09647.yaml  redwood_chair_01053.yaml  redwood_monitor_01041.yaml  self_allobject_circle.yaml  self_allobject_ground.yaml  standard_param.yaml  tum_fr1_desk.yaml  tum_fr2_dishes.yaml
deep_sdf/: workspace.py
include/: Frame.h  FrameDrawer.h  KeyFrame.h  Labeller.h  LocalMapping.h  Map.h  MapDrawer.h  MapObject.h  MapPoint.h  ObjectDetection.h  ObjectDrawer.h  Optimizer.h  System.h  Tracking.h  Viewer.h
include/core/: BasicEllipsoidEdges.h  ConstrainPlane.h  Ellipsoid.h  Geometry.h  Optimizer.h  Plane.h  PriorInfer copy.h  PriorInfer.h  SemanticLabel.h  SupportingPlane.h
include/utils/: Logger.h  dataprocess_utils.h  file_operate.h
reconstruct/: __init__.py  contents.py  detector2d.py  kitti_sequence.py  mono_sequence.py  optimizer.py  tools.py  utils.py
scripts/: adjust_dataset_redwood.sh  associate.py  associate_data.py  associate_redwood.py  reconstructFrame.sh  run_freiburg.sh  run_kitti.sh  run_redwood.sh  run_self.sh  run_tum.sh  showMap_step1_extract_objects.sh  showMap_step2_visualize.sh  showZeroCodeShape.py  visualize.py
src/: Frame.cc  FrameDrawer.cc  KeyFrame.cc  KeyFrame_util.cc  Labeller.cc  LocalMapping.cc  LocalMapping_util.cc  LoopClosing_util.cc  MapDrawer.cc  MapDrawer_util.cc  MapObject.cc  Map_util.cc  ObjectDetection.cc  ObjectDrawer.cc  Optimizer.cc  Optimizer_util.cc  System.cc  System_util.cc  Tracking.cc  Tracking_util.cc  Viewer.cc
src/Polygon/: Polygon.cpp  Polygon.hpp
src/Relationship/: CMakeLists.txt  Relationship.cpp  Relationship.h
src/config/: Config.cpp  Config.h
src/core/: BasicEllipsoidEdges.cpp  ConstrainPlane.cpp  Ellipsoid.cpp  Geometry.cpp  NonparamDA.cpp  Optimizer.cpp  Plane.cc  PriorInfer.cpp  SemanticLabel.cpp  SupportingPlane.cpp
src/dense_builder/: builder.cpp
src/eval/: CMakeLists.txt  eval.cpp
src/evo/: CMakeLists.txt  Hungarian.h  evo.cpp  evo.h
src/pca/: CMakeLists.txt  EllipsoidExtractor.cpp  EllipsoidExtractor.h  EllipsoidExtractorEdges.cpp  EllipsoidExtractorEdges.h  EllipsoidExtractorLocalOptimization.cpp  EllipsoidExtractorMultiPlanes.cpp
src/plane/: CMakeLists.txt  PlaneExtractor.cpp  PlaneExtractor.h  PlaneExtractorManhattan.cpp  PlaneExtractorManhattan.h  PlaneVertexEdges.h
src/symmetry/: BorderExtractor.cpp  BorderExtractor.h  CMakeLists.txt  PointCloudFilter.cpp  PointCloudFilter.h  Symmetry.cpp  Symmetry.h  SymmetrySolver.cpp  SymmetrySolver.h
src/tools/: CMakeLists.txt  pcd2bin.cc
src/tum_rgbd/: io.cpp  io.h
src/utils/: Logger.cpp  dataprocess_utils.cpp  file_operate.cpp  matrix_utils.cpp
test/: mix_rgb_and_depth_img.py  pcd2bin.py  show_depth_img.py  test_depth_img.py  test_detect.py  test_multi_object_decoder.py
